--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
     "seeder": "tsc seeder/seeder.ts --outDir .temp && node .temp/seeder/seeder.js && rmdir /s /q .temp"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
     "next-connect": "^1.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-bootstrap": "^2.9.2",
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-js-pagination": "^3.0.3",
+    "react-star-ratings": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-js-pagination": "^3.0.7",
+    "@types/react-star-ratings": "^2.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "typescript": "^5"
