--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "seeder": "tsc seeder/seeder.ts --outDir .temp && node .temp/seeder/seeder.js && rmdir /s /q .temp"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "next-connect": "^1.0.0",
     "react": "^18",
     "react-bootstrap": "^2.9.2",
@@ -20,9 +23,12 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-js-pagination": "^3.0.3",
+    "react-redux": "^9.1.0",
     "react-star-ratings": "^2.3.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
