--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
+    "cloudinary": "^1.41.3",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
