--- a/package.json
+++ b/package.json
@@ -14,24 +14,34 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "cloudinary": "^1.41.3",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "mdbreact": "^5.2.0",
+    "moment": "^2.30.1",
+    "moment-range": "^4.0.2",
     "mongoose": "^8.0.4",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-connect": "^1.0.0",
+    "nodemailer": "^6.9.8",
     "react": "^18",
     "react-bootstrap": "^2.9.2",
+    "react-datepicker": "^5.1.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-js-pagination": "^3.0.3",
     "react-redux": "^9.1.0",
-    "react-star-ratings": "^2.3.0"
+    "react-star-ratings": "^2.3.0",
+    "stripe": "^14.15.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18",
     "@types/react-js-pagination": "^3.0.7",
     "@types/react-star-ratings": "^2.3.3",
