--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "cloudinary": "^1.41.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
@@ -26,6 +27,7 @@
     "nodemailer": "^6.9.8",
     "react": "^18",
     "react-bootstrap": "^2.9.2",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^5.1.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
@@ -38,6 +40,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/chart.js": "^2.9.41",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
